fixing spacing

--- a/secondaryDisplay/style.css
+++ b/secondaryDisplay/style.css
@@ -76,7 +76,7 @@ font-display:auto;font-style:normal;font-weight:100;
     width: 11%;
     /* padding-left: 2.5%; */
     margin: 1.2%;
-    padding-left: .5%;
+    padding-left: .25%;
     text-align: center;
     font-weight: 300;
     /* border: red;
